# legged_robots_ROS2

./: LICENSE
src/dynamixel_sdk/: CMakeLists.txt  package.xml
src/dynamixel_sdk/include/dynamixel_sdk/: group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
src/dynamixel_sdk/src/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  port_handler_linux.cpp  port_handler_mac.cpp  port_handler_windows.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
src/legged_robot_bringup/: CMakeLists.txt  package.xml
src/legged_robot_bringup/config/: legged_robot_params.yaml
src/legged_robot_bringup/launch/: legged_robot.launch.py
src/legged_robot_bringup/src/: legged_robot_parameter_server.cpp
src/legged_robot_controller/: CMakeLists.txt  legged_robot_controller.xml  package.xml
src/legged_robot_controller/include/legged_robot_controller/: FABRIK2D.hpp  control.hpp  gait.hpp  ik.hpp  servo_driver.hpp
src/legged_robot_controller/src/: FABRIK2D.cpp  control.cpp  gait.cpp  ik.cpp  legged_robot_controller.cpp  servo_driver.cpp
src/legged_robot_msgs/: CMakeLists.txt  package.xml
src/legged_robot_msgs/msg/: FeetPositions.msg  LegsJoints.msg  Pose.msg
