<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>legged_robot_controller</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="robdome@todo.todo">robdome</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>legged_robot_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>dynamixel_sdk</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
